--- a/weeks/week-4.qmd
+++ b/weeks/week-4.qmd
@@ -249,4 +249,90 @@ gapminder_2007 |>
   theme_minimal()
 ```
 
+### 5.4 Missing data
+
+Data rarely comes clean, and sometimes data can contain missing value. In R missing values are stored as `NA`. Once we go to the introduction to  statistics section, we will deal with missing values.
+
+
+### 5.5 Reshaping data
+
+There are 2 types of dataframes: wide and long formats. I will use examples to illustrate both types. 
+
+Suppose we have data containing GDP increase rate of South Africa from 2010 to 2020 Let us create a _long_ format of this dataframe:
+
+```{r}
+year <- c(2010:2020)
+  
+gdp_rate <- c(2.8, 3.1, 3.3, 2.2, 1.9, 1.3, 1.5, 0.6, 0.8, 0.2, -7.0)
+
+sa_gdp_long <- data.frame(year, gdp_rate)
+
+sa_gdp_long
+```
+
+The dataframe is in long format: We have one column reprenting all years, and gdp_rate column representing all values of GDP growth rate. What if we want to change to a _wide_ format? We can use `pivot_wider()` function within `tidyr` package, also a part of `tydiverse`:
+
+```{r}
+sa_gdp_wide <- pivot_wider(sa_gdp_long,  names_from = year, values_from = gdp_rate)
+
+sa_gdp_wide
+```
+
+You can see that in a wide format, each year is a column.
+
+### 5.5.1 Excercise
+
+In the gapminder data do the following:
+
+- Select country, year and life expectancy columns
+
+- filter rows rows from South Africa, Zimbabwe and Mozambique
+
+- reshape this data to a wide format
+
+## 5.6 Joining data
+
+You my have 2 dataframes with corresponding ID columns but with other different column names. Create a first dataframe:
+
+```{r}
+
+country_name <- c("South Africa", "Zimbabwe", "Mozambique", "Botswana", "Eswatini", "Lesotho", "Namibia")
+
+set.seed(187)
+population <- sample(5000:15000, 7)
+
+pop_df <- data.frame(country_name, population)
+
+pop_df
+```
+
+Create a second dataframe:
+
+```{r}
+country_name <- c("South Africa", "Zimbabwe", "Mozambique", "Botswana", "Eswatini", "Lesotho", "Namibia")
+
+set.seed(50)
+avg_age <- sample(23:35, 7)
+
+age_df <- data.frame(country_name, avg_age)
+
+age_df
+```
+
+Now we have 2 data frames: pop_df with a fake data on countries' population and the age_df with a fake data on countries' average age. The common name in both dataframes is `country_name`. We will use `merge()` function to join 2 dataframes:
+
+```{r}
+combined_df <- merge(pop_df, age_df, by = "country_name")
+
+combined_df
+```
+
+Bingo!
+
+There is more to joining data: `merge()` is a Base R funcion. There are other options of joining data using `dplyr`; see [this guide](https://dplyr.tidyverse.org/reference/mutate-joins.html)
+
+
+
+
+
 
